--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
-    "deploy": "npm run build && npm version minor && npm publish",
+    "deploy": "npm run build && npm publish",
     "test": "tsdx test"
   },
   "peerDependencies": {
