--- a/package.json
+++ b/package.json
@@ -1,45 +1,24 @@
 {
   "name": "zeit-now-mux-builder",
-  "version": "0.6.0",
-  "main": "dist/index.js",
-  "umd:main": "dist/zeit-now-mux-builder.umd.production.js",
-  "module": "dist/zeit-now-mux-builder.es.production.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist"
+  "version": "UNVERSIONED",
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "deploy": "npm run build && npm publish",
-    "test": "tsdx test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "peerDependencies": {
-    "@now/build-utils": "^0.5.5"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jnwng/zeit-now-mux-builder.git"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jnwng/zeit-now-mux-builder/issues"
   },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "devDependencies": {
-    "@now/build-utils": "^0.5.5",
-    "@types/jest": "^24.0.13",
-    "husky": "^2.3.0",
-    "prettier": "^1.17.1",
-    "pretty-quick": "^1.11.0",
-    "tsdx": "^0.6.1",
-    "tslib": "^1.9.3",
-    "typescript": "^3.5.1"
-  },
-  "dependencies": {
-    "@mux/mux-node": "^2.2.0",
-    "cheerio": "^1.0.0-rc.3"
-  }
+  "homepage": "https://github.com/jnwng/zeit-now-mux-builder#readme"
 }
